# ip-manger

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_release_hardening.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/v1/: addresses.py  auth.py  conflicts.py  dashboard.py  devices.py  io_csv.py  router.py  sites.py  subnets.py  users.py
backend/app/core/: config.py  constants.py  exceptions.py  middleware.py  rate_limit.py  security.py
backend/app/db/: migrate_sqlite.py  prepare_database.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: common.py
backend/app/services/: ip_service.py  ip_utils.py  serializers.py  subnet_service.py
backend/scripts/: smoke_test.py
backend/tests/: conftest.py  test_auth.py  test_auth_password.py  test_csv_security.py  test_devices.py  test_disable_enable.py  test_ip_lifecycle.py  test_migrations.py  test_page_and_mac.py  test_rate_limit_security.py  test_rbac.py  test_security_headers.py  test_service_unit.py  test_startup_policy.py  test_users.py  test_validation_and_sites.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PRODUCT.md  PRODUCTIZATION_REPORT.md  RESUME_BLURB.md  TESTING.md  schema.sql  开发记录.md  (+4 more)
(+61 files in other folders)
